temporal/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: temporal
  labels:
    istio-injection: "disabled"
