temporal/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: leenet-gateway-temporal.leenet.link
spec:
  hosts:
  - "temporal.leenet.link"
  gateways:
  - neon-ingress/leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
      - destination:
          host: temporaltest-web.temporal.svc.cluster.local
          port:
            number: 8080
